--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       name="description"
       content="Страница о взгляде на перфекционизм в работе и учёбе."
     />
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="og:title" content="Надо сделать идеально" />
+    <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе." />
     <meta property="og:url" content="https://ya.ru" />
     <meta property="og:image" content="./images/poster.png" />
     <link rel="icon" href="./icons/icon.ico" sizes="any" />
@@ -19,11 +21,9 @@
     <title>Надо сделать идеально</title>
   </head>
   <body class="page">
-    <main class="content">
-      <h1 class="heading">Надо<br />сделать<br />идеально</h1>
-      <video class="video" poster="./images/poster.png" muted autoplay loop>
-        <source src="./video/cover-video.mp4" />
-      </video>
-    </main>
+    <h1 class="heading">Надо<br />сделать<br />идеально</h1>
+    <video class="video" poster="./images/poster.png" muted autoplay loop>
+      <source src="./video/cover-video.mp4" />
+    </video>
   </body>
 </html>
